--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.content %></p>
-
-<%= cl_image_tag @article.image.key %>
+<% if @article.image.attached? %>
+  <%= cl_image_tag @article.image.key %>
+<% end %>
 
