--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
+  <div class="container-footer">
     <h3>Just Fish Poissonnerie</h3>
     <div class = "global-infos">
       <section class="location">
