--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,86 @@
-<div class="container">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<header>
+  <%= cl_image_tag @home_image, class: 'homepage-main-picture'%>
+  <div class="homepage-logo">
+    <h1>Poissonnerie</h1>
+    <%= cl_image_tag "https://res.cloudinary.com/debeemobv/image/upload/v1621610775/Seeds/Logo-removebg-preview_semzxt.png", class: ''%>
+    <p>La mer près de chez vous</p>
+  </div>
+</header>
 
-  <ul id="weekly-products"></ul>
+
+<div class="container homepage">
+  <p>Just fish est une <strong>poissonnerie</strong>  située à Wargnies-le-Grand, <br>
+    près de Valenciennes, dans le Nord <br>
+    Produits frais, circuit court <br>
+    ou encore écologie et qualité des produits.</p>
+
+  <section class="homepage-article">
+    <% @articles.each do |article| %>
+      <%= cl_image_tag article.image.key%>
+      <div>
+        <h2><%= article.title %></h2>
+        <p><%= article.small_description %></p>
+        <%= link_to "Lire l'article", root_path, class: 'button cta'%>
+      </div>
+    <% end %>
+  </section>
+
+  <section class="homepage-recipe">
+    <div>
+      <h2><%= @recipe.title %></h2> 
+      <%= link_to "Voir la recette", root_path, class: 'button cta-strong'%>
+    </div>
+    <%= cl_image_tag @recipe.image.key%>
+  </section>
+
+  <div class="weekly-products-presentation">
+    <ul id="weekly-products"></ul>
+  </div>
+
+  <section class="how-to-order">
+
+    <h2>Pour passer commande, c'est simple</h2>
+    <div class= 'how-to-order-steps'>
+      <div>
+        <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
+        <h3>1. Prenez connaissance</h3>
+        <p>de la selection de la semaine</p>
+      </div>
+      <div>
+        <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
+        <h3>2. Reservez votre panier</h3>
+        <p>Sur l'application <strong>Casamiam</strong> <br> ou par mail, en précisant chaque article</p>
+      </div>
+      <div>
+        <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
+        <h3>3. Venez retirer<br>votre commande </h3>
+        <p>en boutique</p>
+      </div>
+    </div>
+  
+  </section>
+
+  <section class = 'order-casamiam'>
+    <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621600909/Seeds/Logo_CM_png_512_u5w2ia.png', class: 'mobile'%>
+    <div class= "casamiam-explanation">
+      <h2>Casamiam</h2>
+      <p>Casamiam est une application. C’est ici que vous pouvez commander nos bons produits. <br> Rendez-vous dans notre boutique Just Fish Poissonnerie</p>
+      <div>
+        <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621602128/Seeds/app-store_tqbrsm.png', class: 'app-logo'%>
+        <%= cl_image_tag 'https://res.cloudinary.com/debeemobv/image/upload/v1621602117/Seeds/bouton-google_put4e0.png', class: 'app-logo'%>
+      </div>
+    </div>
+
+  </section>
+
+  <div class="who-are-we">
+    <h2>Qui sommes-nous ?</h2>
+    <div class = 'who-are-we-description'>
+      <p><%= @about_text.content %></p>
+      <%= cl_image_tag @home_image_about, class: ''%>
+    </div>
+  </div>
+
 
 </div>
 
