add products with casamiam API

--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -28,7 +28,7 @@ header{
   section{
     background-color: $light-bg;
     padding: 20px;
-    margin: 40px 0;
+    margin: 60px 0;
     border-radius: 10px;
   }
   .homepage-article{
@@ -77,6 +77,15 @@ header{
         margin: 0;
       }
     
+    }
+  }
+  .weekly-products-presentation{
+    margin: 100px 0;
+    #weekly-products{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 40px;
+      margin: 70px 0;
     }
   }
 
