--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,9 @@
   </section>
 
   <div class="weekly-products-presentation">
-    <ul id="weekly-products"></ul>
+    <h2 class = 'cursive'>La selection de la semaine</h2>
+    <div id="weekly-products"></div>
+    <%= link_to "Comment passer commande ?", root_path, class: 'button cta-strong'%>
   </div>
 
   <section class="how-to-order">
