--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -132,6 +132,20 @@ header{
   }
 }
 
+.modal-background{
+  visibility: hidden;
+  opacity:0;
+  width:100vw;
+  height: 100vh;
+  z-index:10;
+  position:fixed;
+  top:0;
+  left:0;
+  background-color: rgba(0,0,0,0.4);
+  transition: all 0.3s ease-out;
+  overflow: auto;
+}
+
 
 @media (max-width:600px) {
   header{
