--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,6 +36,7 @@
   <div class="weekly-products-presentation">
     <h2 class = 'cursive'>La selection de la semaine</h2>
     <div id="weekly-products"></div>
+    <%# L'affichage des produits en grand est dans la navbar. %>
     <%= link_to "Comment passer commande ?", root_path, class: 'button cta-strong'%>
   </div>
 
