--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,6 +3,7 @@ display: flex;
   h4{
     color: $secondary-blue;
     cursor: pointer;
+    margin: 10px 0 0 0;
   }
   .product-description{
     display: flex;
@@ -54,6 +55,7 @@ display: flex;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    //position: relative;
     overflow: scroll;
     max-width: 600px;
     margin: 0 auto;
@@ -62,4 +64,38 @@ display: flex;
     text-align: center;
     font-weight: bold;
   }
+}
+
+@media (max-width:600px) {
+  .card-product{
+    margin: 20px auto;
+
+  }
+  .show-product{
+    padding: 15px;
+    width: 80%;
+    height: 70vh;
+    top: 110px;
+    left: calc(100vw - 95%);
+    display: block;
+    .show-product-img{
+      width: 200px;
+      height: 200px;
+      margin-bottom: 15px;
+
+    }
+    .show-product-description{
+      display: block;
+      //padding-top: 150px;
+      width: 70vw;
+      height: calc(70vh - 240px);
+      overflow-y: auto;
+
+    }
+
+
+
+
+  }
+
 }
