--- a/app/assets/stylesheets/pages/_articles.scss
+++ b/app/assets/stylesheets/pages/_articles.scss
@@ -1,3 +1,70 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.show-article{
+
+  .article-image{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    margin: 30px 0;
+  }
+  h1{color: $secondary-blue}
+  article{
+    text-align: left;
+    width:70%;
+    margin: 0 auto 100px auto;
+  }
+}
+
+.index-articles{
+  h1{
+    color:$secondary-blue;
+    padding: 50px;
+  }
+  .index-articles-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 24px;
+    .index-articles-card{
+      display: flex;
+      flex-direction: column;
+      margin: 40px auto;
+      img{
+        width: 250px;
+        height: 250px;
+        max-width: 100%;
+        margin: 0 auto;
+        object-fit: cover;
+      }
+      p{
+        width: 250px;
+        margin: 0 auto;
+        text-align: left;
+      }
+    }
+  }
+}
+
+
+@media (max-width:600px) {
+
+  .index-articles{
+    h1{
+      padding: 20px;
+    }
+    .index-articles-grid{
+      display: block;
+    }
+
+  }
+  .show-article{
+
+    .article-image{
+      height: 200px;
+    }
+  }
+
+
+}
