created view of show and index recipes

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -22,3 +22,10 @@
     color: $primary-orange;
   }
 }
+
+.small-btn{
+  border-bottom: 2px solid black;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0 auto;
+}
