--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,11 @@
-<h1>Recipe#show</h1>
-<p>Find me in app/views/recipe/show.html.erb</p>
+<div class="container show-recipe">
+  <h1><%= @recipe.title %></h1>
+  <% if @recipe.image.attached? %>
+    <%= cl_image_tag @recipe.image.key, class: 'recipe-image' %>
+  <% end %>
+  <%= link_to "Retour aux recettes", recipes_path, class: 'button cta'%>
 
-<h1><%= @recipe.title %></h1>
-<% if @recipe.image.attached? %>
-  <%= cl_image_tag @recipe.image.key %>
-<% end %>
+
+</div>
+
 
