--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,19 @@
-<h1>Recipe#index</h1>
-<p>Find me in app/views/recipe/index.html.erb</p>
 
-<%= @recipes %>
+<div class="container index-articles">
+
+  <h1>Nos recettes</h1>
+
+  <div class="index-articles-grid">
+    <% @recipes.each do |recipe| %>
+    <div class="index-articles-card">
+    <%= link_to recipe_path(recipe), class: '' do %>
+      <% if recipe.image.attached? %>
+        <%= cl_image_tag recipe.image.key, class: 'recipe-image'%>
+      <% end %>
+      <h3><%= recipe.title %></h3>
+      <%= link_to "Voir", recipe_path(recipe), class: 'small-btn'%>
+      <% end %>
+    </div>
+    <% end %>
+  </div>
+</div>
