--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,8 +4,8 @@
       <%= link_to "Accueil", root_path, class: current_page?(root_path) ? 'active' : ''%>
       <%= link_to "Selection de la semaine", root_path, class: ''%>
       <%= link_to "Nos produits", root_path, class: ''%>
-      <%= link_to "Recettes", root_path, class: ''%>
-      <%= link_to "Articles", articles_path, class: current_page?(articles_path) ? 'active' : ''%>
+      <%= link_to "Recettes", recipes_path, class: controller_name == 'recipes' ? 'active' : ''%>
+      <%= link_to "Articles", articles_path, class: controller_name == 'articles' ? 'active' : ''%>
       <%= link_to "Infos pratiques", root_path, class: ''%>
     </nav>
   <%# Petits élements pour la navbar mobile %>
