--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,14 @@
-<h1>Articles#edit</h1>
+
+
+
 
 <% if user_signed_in? %>
   <% if current_user.admin  %>
+  <div class="dashboard-container">
+    <%= render 'shared/admin_dashboard_nav' %>
+    <div class="dashboard-side">
+
+
       <h1>Modifier un article</h1>
       <% if @article.image.attached? %>
         <%= cl_image_tag @article.image.key, width: 200, height: 200 %>
@@ -10,13 +17,31 @@
       <% end %>
       <p><%= @article.title %> </p>
         <%= simple_form_for(@article) do |f| %>
-          <%= f.input :title %>
-          <%= f.input :content %>
+
+
+          <%= f.label  'Titre'%>
+          <%= f.input :title, label: false%>
+          <%= f.label  "Résumé - pour la page d'accueil"%>
+          <%= f.input :small_description, label: false%>
+          <%= f.label  'Contenu'%>
+          <%= f.input :content, label: false, class: "dashboard-new-article-field" %>
+          <%= f.label  'Photo'%>
+          <%= f.file_field :image, label: false %>
           <%= f.input :visible, label: "Mettre en page d'accueil" %>
-          <%= f.file_field :image %>
-          <%= f.submit%>
+          <%= f.submit 'Sauvegarder les changements'%>
         <% end %>
   <% end %>
 
   <%= link_to 'Supprimer cet article', article_path(@article), method: :delete, data: { confirm: "Vous êtes sur le point de supprimer cet article. Etes vous sur ?" } %>
-<% end %>
+
+
+
+
+
+    </div>
+  </div>
+  <% else %>
+    <p>Vous ne pouvez pas accéder à cette page</p>
+    <%= link_to 'Accueil', root_path%>
+
+  <% end %>
