--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,14 +1,34 @@
-<h1>Recipe#new</h1>
-<p>Find me in app/views/recipe/new.html.erb</p>
-
 <% if user_signed_in? %>
   <% if current_user.admin  %>
-      <h1>Ajouter une recette</h1>
-        <%= simple_form_for(@recipe) do |f| %>
-          <%= f.input :title %>
-          <%= f.file_field :image %>
-          <%= f.submit "Ajouter une recette"%>
-        <% end %>
-  <% end %>
+  <div class="dashboard-container">
+    <%= render 'shared/admin_dashboard_nav' %>
+    <div class="dashboard-side">
 
+
+
+
+      <h1>Ajouter une recette</h1>
+
+    
+        <%= simple_form_for(@recipe) do |f|%>
+
+          <%= f.label 'Titre'%>
+          <%= f.input :title, label: false %> <br>
+          <%= f.label 'Recette en image'%> <br>
+          <%= f.file_field :image  %> <br> <br>
+          <%= f.label "Image pour la page d'accueil"%> <br>
+          <%= f.file_field :cover_image %> <br> <br>
+          <%= f.submit "Ajouter la recette"%>
+        <% end %>
+      
+
+
+
+    </div>
+  </div>
+  <% else %>
+    <p>Vous ne pouvez pas accéder à cette page</p>
+    <%= link_to 'Accueil', root_path%>
+
+  <% end %>
 <% end %>
