small changes homepage

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -9,8 +9,7 @@
       <h1>Nouvel article</h1>
 
       <p>Il est possible de mettre le texte en forme : </p>
-      <div>##Titre</div>
-      <div>###Sous-titre</div>
+      <div>###Sous - Titre</div>
       <div>*mots importants*</div>
       <div>**mots très importants**</div>
       <div>tirer un trait : ----- </div>
