--- a/app/views/shared/_order.html.erb
+++ b/app/views/shared/_order.html.erb
@@ -10,7 +10,7 @@
       <div>
         <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
         <h3>2. Reservez votre panier</h3>
-        <p>Sur l'application <strong>Casamiam</strong> <br> ou par mail, en précisant chaque article</p>
+        <p>Sur l'application <strong>Casamiam</strong> <br> ou par <strong>mail</strong>, en précisant bien votre commande</p>
       </div>
       <div>
         <%= cl_image_tag 'https://www.icone-png.com/png/13/12632.png', class: ''%>
