--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,14 +1,18 @@
 footer{
-  height:70vh;
+  height:40vh;
   display: flex;
   align-items:flex-end;
+  justify-content: center;
   background-size:cover;
   background-position: center;
-  background-image: url(https://res.cloudinary.com/debeemobv/image/upload/v1621587735/Seeds/footer_zqz60h.png);
+  background-color: $light-bg;
+  margin-top: 50px;
+
+  //background-image: url(https://res.cloudinary.com/debeemobv/image/upload/v1621587735/Seeds/footer_zqz60h.png);
   .container-footer{
     margin: 24px;
     display: inline;
-    margin-bottom: 100px;
+    margin-bottom: 40px;
     .global-infos{
       display: flex;
       section{
