--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,17 +3,11 @@
     <h3>Just Fish Poissonnerie</h3>
     <div class = "global-infos">
       <section class="location">
-        <span>Adresse ligne 1 <br> Adresse Ligne 2 <br> VILLE <br><br> 050505050 <br>Adresse mail</span>
+        <p><%= markdown($contact) %></p>
       </section>
-      <section class="navigation">
-          <li>Selection de la semaine</li>
-          <li>Nos produits</li>
-          <li>Contact</li>
-          <li>Nos recettes</li>
-          <li>Qui sommes nous ?</li>
-      </section>
+
       <section class="horaires">
-        <span>Ouverts le mardi <br> et le jeudi</span>
+        <p> <%= markdown($horaires) %></p>
       </section>
 
     </div>
