a lot of small patches

--- a/app/assets/stylesheets/components/_order.scss
+++ b/app/assets/stylesheets/components/_order.scss
@@ -60,6 +60,11 @@
   }
   .order-casamiam{
     display: block;
+    .casamiam-explanation{
+      p{
+        width: 80%;
+      }
+    }
     .mobile{
       display: none;
     }
