--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -51,6 +51,8 @@
 
   <h1>Nos recettes</h1>
 
+  <p>Chaque semaine, retrouvez une <strong>nouvelle recette</strong> à partir de  <br> nos produits de la mer.</p>
+
   <div class="index-articles-grid">
     <% @recipes.each do |recipe| %>
     <div class="index-articles-card">
