--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,12 +15,12 @@
   img{
     margin: auto;
     display: block;
-    width: 100px;
+    width: 120px;
+    padding-top: 20px;
   }
   nav{
     display: flex;
-    justify-content: space-around;
-    
+    justify-content: space-around;    
     a{
       transition: all 0.5s ease-in-out;
       border-bottom: 4px solid transparent;
@@ -46,6 +46,11 @@
 @media (max-width:600px) {
 
   .navbar{
+    height: 50px;
+    img{
+      width: 100px;
+      padding-top: 5px;
+    }
     .desktop{
       display: none;
     }
@@ -57,7 +62,7 @@
       font-size: 24px;
       position: absolute;
       left: 15px;
-      top: 30px;
+      top: 8px;
       background-color: white;
       padding: 4px 8px;
       border-radius: 4px;
@@ -76,7 +81,7 @@
       transform:translateX(-100vh);
       transition: all 0.3s ease-out;
       position: absolute;
-      top:100px;
+      top:50px;
       z-index:10;
       width:100vw;
       nav{
